Revert "Fix the authorization of the packages"
This reverts commit 0c4b3359a627f8818493e616c2d7aa794047cf94.